# MEngine

./: .clang-format  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build-test.yml
editor/: CMakeLists.txt
editor/res/: imgui.ini
editor/res/scenes/: test.scene
editor/res/scripts/: test.lua
editor/res/shaders/: test_vert.glsl
editor/src/: editor.cpp  editor.hpp
engine/: CMakeLists.txt
engine/core/: application.cpp  application.hpp  command.hpp  entry_point.cpp  entry_point.hpp  input.hpp  logger.cpp  script_engine.hpp  task_dispatcher.cpp  uuid.hpp
engine/render/: frame_buffer.cpp  frame_buffer.hpp  gl.cpp  render_context.hpp  render_pass.cpp  render_pass.hpp  render_pipeline.cpp  renderer.cpp  renderer.hpp  shader.cpp  shader.hpp  texture.cpp  texture.hpp
engine/scene/: camera.hpp  component.hpp  entity.hpp  scene.cpp  scene.hpp
engine/src/: mengine.hpp
engine/src/core/: application.cpp  application.hpp  command.hpp  common.hpp  entry_point.cpp  entry_point.hpp  input.hpp  logger.cpp  logger.hpp  platform.hpp  script_engine.cpp  script_engine.hpp  uuid.cpp
engine/src/render/: frame_buffer.cpp  frame_buffer.hpp  gl.cpp  gl.hpp  render_context.hpp  render_pass.cpp  render_pass.hpp  render_pipeline.cpp  render_pipeline.hpp  renderer.cpp  renderer.hpp  shader.cpp  shader.hpp  texture.cpp  texture.hpp
engine/src/scene/: camera.hpp  component.hpp  scene.cpp  scene.hpp
examples/: CMakeLists.txt
examples/rotating_cube/: CMakeLists.txt
examples/rotating_cube/src/: rotating_cube.cpp  rotating_cube.hpp
examples/sandbox/: CMakeLists.txt
res/shaders/: test_frag.glsl  test_vert.glsl
sandbox/src/: sandbox.cpp  sandbox.hpp
src/: application.cpp  application.hpp  camera.hpp  command.hpp  component.hpp  entity.hpp  gl.cpp  gl.hpp  input.hpp  logger.cpp  logger.hpp  main.cpp  renderer.cpp  renderer.hpp  scene.cpp  scene.hpp  shader.cpp  shader.hpp  task_dispatcher.cpp  task_dispatcher.hpp  task_handler.cpp  task_handler.hpp
src/core/: application.cpp  application.hpp  command.hpp  logger.cpp  logger.hpp  main.cpp  script_engine.hpp  task_dispatcher.hpp  task_handler.cpp  task_handler.hpp
src/render/: frame_buffer.cpp  gl.cpp  gl.hpp  renderer.cpp  renderer.hpp  texture.cpp  texture.hpp
src/scene/: camera.hpp  component.hpp  entity.hpp  scene.cpp  scene.hpp
